# originlab-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  PLAN.md  PROJECT_REVIEW.md  README.md  pyproject.toml
docs/: OPTIMIZATION_REFACTOR_PLAN_v0.md  UPDATE_LOG_v0.md
docs/subagents/: INITIAL_SUBAGENT_PLAN.md
src/originlab_mcp/: __init__.py  exceptions.py  origin_manager.py  server.py  types.py
src/originlab_mcp/tools/: __init__.py  advanced.py  analysis.py  customize.py  data.py  export.py  plot.py  system.py
src/originlab_mcp/utils/: __init__.py  constants.py  helpers.py  validators.py
tests/: test_helpers.py  test_phase3.py  test_tools.py
